--- a/css/styles.css
+++ b/css/styles.css
@@ -130,9 +130,25 @@ ul {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--brand-color-white);
+  margin:0 452px 30px 452px;
+  min-width: 696px;
+
+ 
+}
+.box-slogan{
+  display: flex;
+  flex-direction:row;
+  justify-content: center;
+  padding-top:200px;
+  padding-bottom: 200px;
   background: var(--brand-color-background-darc);
 }
 
+.box-attitude{
+  display: flex;
+  flex-direction: column;
+  padding-top: 94px;
+}
 .atuty-title {
   font-weight: 700;
   font-size: 14px;
@@ -203,7 +219,9 @@ ul {
   text-align: center;
   letter-spacing: 0.06em;
   color: var(--brand-color-white);
+  margin-left: 742px;
 }
+
 
 /*tu style galerii portfolio*/
 .project-title {
