--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ body {
   color: var(--brand-color-text-black);
   font-weight: 400;
   font-size: 16px;
+  width: 1600px;
 }
 
 .container {
@@ -191,7 +192,7 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 50px;
-  background-color: var(--background-page-color);
+  padding-top: 0;
 }
 .team{
   display: flex;
@@ -202,7 +203,14 @@ ul {
 .gallery-our-team{
   display:flex;
   flex-direction: row;
+  justify-content: space-between;
   gap: 30px;
+}
+.frame-team{
+  background-color: var(--brand-color-white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
+
 }
 .team-name {
   font-weight: 500;
@@ -210,6 +218,8 @@ ul {
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 .team-function {
   font-size: 16px;
@@ -217,6 +227,7 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--brand-color-grey);
+  padding-bottom: 30px;
 }
 /*Style buttons*/
 
