--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,14 @@ body {
   color: var(--brand-color-text-black);
   font-weight: 400;
   font-size: 16px;
-  width: 1600px;
 }
 
 .container {
   max-width: 1200px;
   margin: 0 auto;
+}
+header{
+  border-bottom: 1px solid var(--border-color-header);
 }
 .box-header {
   background-color: var(--brand-color-white);
@@ -33,7 +35,8 @@ body {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  border-bottom: 1px solid var(--border-color-header);
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 .nav-list {
   display: flex;
@@ -41,7 +44,7 @@ body {
   justify-content: flex-start;
   gap: 46px;
   padding-left: 0;
-  margin: 32px 364px 32px 0;
+  margin-right: 371px;
 }
 
 .buttons {
@@ -85,9 +88,7 @@ body {
   color: var(--brand-color-white);
 }
 .logo-header {
-  margin-top: 24px;
   margin-right: 93px;
-  margin-bottom: 25px;
 }
 ul {
   list-style-type: none;
@@ -116,7 +117,7 @@ ul {
 }
 .mail-header {
   max-width: 135px;
-  margin: 32px 50px 32px 0;
+  margin-right: 50px;
 }
 .mail-header:hover,
 .tel-header:hover {
